# digichecks-ontology-service

./: .env.example  .gitignore  README.md  init_database.py  pyproject.toml
alembic/versions/: fbe5cb267541_initial.py
api/: enums.py  main.py
api/crud/: application.py
api/dependencies/: __init__.py  config.py  database.py  security.py
api/models/core/: application.py
api/routers/: application_router.py  ontology_router.py
api/schemas/: __init__.py
api/schemas/app/: ontology.py
api/schemas/core/: application.py
